# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.527 2005/12/11 21:55:14 codeman Exp $

*GLI-0.3 (27 Oct 2005)

  11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  use GLIException when there's an import problem
  added debug code to show install_steps
  src/templates/amd64ArchitectureTemplate.py:
  add . to import path
  proper path this time: ../../templates

  11 Dec 2005; Preston Cody <codeman@gentoo.org>
  added initial glossary and gimli diagram to the docs directory.
  modify gli-dialog to allow editing of the install_profile after loading XML.
  
  8 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/html/webgli/:
  converted globaluse, localuse, networkmounts, portagetree, and stageselection
  moved saveclientconfig stuff into clientconfig
  moved saveconfigfiles into config files
  converted etc_portage and makedotconf
  converted bootloader and kernel
  convert daemons, extrapackages, networking, review, services, timezone, users
  src/net/server/gliserv.py:
  proper 404 handling for .pyhtml extension
  HTML escape <% %> stuff
  work around python's sucky regexes
  src/GLIInstallProfile.py:
  allow set_{rsync,ftp,http}_proxy() to accept empty values

  7 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  initial commit of Legolas templating engine
  302 redirects
  src/net/server/html/index.html, src/net/server/webgli_template.html:
  minor changes for new code
  src/net/server/html/*.pyhtml, src/net/server/html/webgli/*.pyhtml:
  initial commit of the conversion from the monolithic WebGLIHandler.py to the
  one file per path Legolas goodness
  partitioning[2-4] done

  5 Dec 2005; Preston Cody <codeman@gentoo.org>
  webgli: dhcp options in CC and post-install.
  updated comparison chart.
  webgli: etc/portage/* and distcc support added.  not too-well tested.
