@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.527 2005/12/11 21:55:14 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.528 2005/12/12 02:40:38 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -12,6 +12,8 @@
   src/templates/amd64ArchitectureTemplate.py:
   add . to import path
   proper path this time: ../../templates
+  src/GLIArchitectureTemplate.py:
+  add _portage_best_version() function
 
   11 Dec 2005; Preston Cody <codeman@gentoo.org>
   added initial glossary and gimli diagram to the docs directory.
